# tame-mvp

./: .gitignore  PROJECT_STRUCTURE.md  README.md  USAGE_GUIDE.md  docker-compose.yml  github_policy.yml  policies.yml  test_tamesdk.py
backend/: Dockerfile  policies.yml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  compliance.py  enforcement.py  policies.py  sessions.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  audit_log.py  policy_version.py  session_log.py
backend/app/services/: compliance_service.py  policy_engine.py  websocket_manager.py
cli/: runlok  tamesdk
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  globals.css  main.tsx
frontend/src/components/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: toaster.tsx
frontend/src/lib/: api.ts  store.ts  utils.ts
frontend/src/pages/: CompliancePage.tsx  Dashboard.tsx  IntegrationPage.tsx  PolicyPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx  SettingsPage.tsx
sdk/python/: README.md  __init__.py  runlok.py  setup.py  tame.py
tamesdk/: README.md  __init__.py  cli.py  client.py  config.py  decorators.py  exceptions.py  models.py  pyproject.toml  setup.py  utils.py
tamesdk/examples/: mcp_agent_example.py  openai_integration.py  quickstart.py
tamesdk/tamesdk/: __init__.py  cli.py  config.py  decorators.py  exceptions.py  models.py
tamesdk_package/tamesdk/: client.py
tests/agent_test/: README.md  example_usage.py  mock_agent.py  mock_tools.py  quick_start.sh  requirements.txt  run_tests.py  test_env.py
tests/agent_test/policies/: test_conditional.yml  test_permissive.yml  test_strict.yml
tests/mock_agent_test/: README.md  example_usage.py  mock_tools.py  run_tests.py
tests/mock_agent_test/policies/: test_conditional.yml  test_permissive.yml  test_strict.yml
tests/real-agent/: .env.example  .gitignore  README.md  SETUP.md  comprehensive_github_agent.py  comprehensive_policy.yaml  create_test_pr.py  fixed_mcp_github_agent.py  github_policy.yaml  mixed_allow_block_demo.py  openai_github_agent.py  real_mcp_agent.py  real_mcp_github_agent.py  real_selective_demo.py  requirements.txt  sample_policy.yaml  selective_policy_demo.py  setup_github_test.py  simple_github_agent.py  test_mcp_connection.py  test_with_your_repo.md  working_mcp_agent.py
